[package]
name = "ad-hole"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
axum = "0.8.9"
diesel = { version = "2", features = ["sqlite", "r2d2"] }
diesel_migrations = "2"
libsqlite3-sys = { version = "0.30", features = ["bundled"] }
mime_guess = "2.0"
reqwest = "0.13.4"
rust-embed = "8"
serde_json = "1.0.150"
tokio = { version = "1.52.3", features = ["full"] }
serde = { version = "1.0.228", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
